[tool.poetry]
name = "global-entry-alerter"
version = "0.1.0"
description = ""
authors = ["Graham Place"]
readme = "README.md"
packages = [{include = "global_entry_alerter"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
twilio = "^7.16.0"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
