[tool.poetry]
name = "global-entry-alerter"
version = "0.1.0"
description = ""
authors = ["Graham Place"]
readme = "README.md"
packages = [{include = "global_entry_alerter"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
twilio = "^7.16.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vital-tracker = "vital_tracker:run"
global-entry-alerter = "global_entry_alerter:run"